; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/hf_ag/extr_bta_ag_co.c_bta_ag_ci_rx_write.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/hf_ag/extr_bta_ag_co.c_bta_ag_ci_rx_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32 }

@BT_DEFAULT_BUFFER_SIZE = common dso_local global i32 0, align 4
@BTA_AG_CI_RX_WRITE_EVT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [66 x i8] c"ERROR: Unable to allocate buffer to hold AT response code. len=%i\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_ag_ci_rx_write(i32 %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  store i32 %10, i32* %8, align 4
  %11 = load i32, i32* %6, align 4
  %12 = sext i32 %11 to i64
  %13 = load i32, i32* @BT_DEFAULT_BUFFER_SIZE, align 4
  %14 = sext i32 %13 to i64
  %15 = sub i64 %14, 8
  %16 = sub i64 %15, 1
  %17 = icmp ugt i64 %12, %16
  br i1 %17, label %18, label %24

18:                                               ; preds = %3
  %19 = load i32, i32* @BT_DEFAULT_BUFFER_SIZE, align 4
  %20 = sext i32 %19 to i64
  %21 = sub i64 %20, 8
  %22 = sub i64 %21, 1
  %23 = trunc i64 %22 to i32
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %18, %3
  br label %25

25:                                               ; preds = %68, %24
  %26 = load i32, i32* %8, align 4
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %76

28:                                               ; preds = %25
  %29 = load i32, i32* %8, align 4
  %30 = load i32, i32* %6, align 4
  %31 = icmp slt i32 %29, %30
  br i1 %31, label %32, label %34

32:                                               ; preds = %28
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %32, %28
  %35 = load i32, i32* %6, align 4
  %36 = sext i32 %35 to i64
  %37 = add i64 8, %36
  %38 = add i64 %37, 1
  %39 = trunc i64 %38 to i32
  %40 = call i64 @osi_malloc(i32 %39)
  %41 = inttoptr i64 %40 to %struct.TYPE_5__*
  store %struct.TYPE_5__* %41, %struct.TYPE_5__** %7, align 8
  %42 = icmp ne %struct.TYPE_5__* %41, null
  br i1 %42, label %43, label %65

43:                                               ; preds = %34
  %44 = load i32, i32* @BTA_AG_CI_RX_WRITE_EVT, align 4
  %45 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %46 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %45, i32 0, i32 0
  %47 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %46, i32 0, i32 1
  store i32 %44, i32* %47, align 4
  %48 = load i32, i32* %4, align 4
  %49 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %50 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %49, i32 0, i32 0
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 0
  store i32 %48, i32* %51, align 4
  %52 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i64 1
  %54 = bitcast %struct.TYPE_5__* %53 to i8*
  store i8* %54, i8** %9, align 8
  %55 = load i8*, i8** %9, align 8
  %56 = load i8*, i8** %5, align 8
  %57 = load i32, i32* %6, align 4
  %58 = call i32 @strncpy(i8* %55, i8* %56, i32 %57)
  %59 = load i8*, i8** %9, align 8
  %60 = load i32, i32* %6, align 4
  %61 = sext i32 %60 to i64
  %62 = getelementptr inbounds i8, i8* %59, i64 %61
  store i8 0, i8* %62, align 1
  %63 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %64 = call i32 @bta_sys_sendmsg(%struct.TYPE_5__* %63)
  br label %68

65:                                               ; preds = %34
  %66 = load i32, i32* %6, align 4
  %67 = call i32 @APPL_TRACE_ERROR(i8* getelementptr inbounds ([66 x i8], [66 x i8]* @.str, i64 0, i64 0), i32 %66)
  br label %76

68:                                               ; preds = %43
  %69 = load i32, i32* %6, align 4
  %70 = load i32, i32* %8, align 4
  %71 = sub nsw i32 %70, %69
  store i32 %71, i32* %8, align 4
  %72 = load i32, i32* %6, align 4
  %73 = load i8*, i8** %5, align 8
  %74 = sext i32 %72 to i64
  %75 = getelementptr inbounds i8, i8* %73, i64 %74
  store i8* %75, i8** %5, align 8
  br label %25

76:                                               ; preds = %65, %25
  ret void
}

declare dso_local i64 @osi_malloc(i32) #1

declare dso_local i32 @strncpy(i8*, i8*, i32) #1

declare dso_local i32 @bta_sys_sendmsg(%struct.TYPE_5__*) #1

declare dso_local i32 @APPL_TRACE_ERROR(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
